--- a/index.css
+++ b/index.css
@@ -48,3 +48,11 @@ body {
     height: 0;
 }
 
+
+@media (max-width: 700px) {
+   .container {
+    flex-direction: column;
+    width: 100%;
+    height: 25%vh;
+   }
+}
