--- a/index.css
+++ b/index.css
@@ -52,7 +52,7 @@ body {
 @media (max-width: 700px) {
    .container {
     flex-direction: column;
-    width: 100%;
-    height: 25%vh;
+    min-width: 100%;
+    height: 30%vh;
    }
 }
